--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -39,6 +39,8 @@
   color:black;
   font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
+  font-family: 'source_code_prolight', sans-serif;
+  font-weight: bold;
 }
 
 header {
@@ -47,4 +49,18 @@ header {
 
 hr{
   clear:both;
+}
+
+h1{
+  font-family: 'source_code_prolight', sans-serif;
+  font-weight:600;
+  letter-spacing: -1.5px;
+  font-weight: bold;
+  font-size:48px
+}
+
+h2{
+  font-family: 'source_code_prolight', sans-serif;
+  font-weight: 600;
+  letter-spacing: -1.5px;
 }
